Fix J8 Compatible